--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "nodemon": "^2.0.20",
+    "npm": "^9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
