--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "nodemon": "^2.0.20",
     "npm": "^9.1.2",
