--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jonathan Huang https://github.com/JH51",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
@@ -22,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
