--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jonathan Huang https://github.com/JH51",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
